--- a/Amazon/Amazon.csproj
+++ b/Amazon/Amazon.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="clientes.csv" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
