--- a/Amazon/packages.config
+++ b/Amazon/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Aspose.Cells" version="24.10.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
+  <package id="NLog" version="5.3.4" targetFramework="net472" />
 </packages>
